--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "chart.js": "^4.4.3",
+    "datatables.net": "^2.0.8",
+    "datatables.net-dt": "^2.0.8",
+    "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "ng-zorro-antd": "^16.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -26,9 +31,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.14",
-    "@angular/cli": "^16.2.14",
+    "@angular/cli": "^16.1.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/datatables.net": "^1.12.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.30",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
